@@ -3,17 +3,43 @@
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>2015.1.1</version>
+    <version>2016.1.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-integrations</artifactId>
   <packaging>pom</packaging>
   <name>OpenNMS Integrations</name>
+  <properties>
+    <skipITs>true</skipITs>
+  </properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <skipITs>${skipITs}</skipITs>
+          <argLine>-Xmx1g -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
+          <systemPropertyVariables>
+            <opennms.home>${project.build.testOutputDirectory}</opennms.home>
+            <java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>
+          </systemPropertyVariables>
+        </configuration>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
   <modules>
     <module>opennms-dns-provisioning-adapter</module>
     <module>opennms-reverse-dns-provisioning-adapter</module>
-    <module>opennms-link-provisioning-adapter</module>
-    <module>opennms-map-provisioning-adapter</module>
     <module>opennms-puppet-provisioning-adapter</module>
     <module>opennms-R</module>
     <module>opennms-rancid-provisioning-adapter</module>
@@ -21,6 +47,7 @@
     <module>opennms-snmp-asset-provisioning-adapter</module>
     <module>opennms-snmp-hardware-inventory-provisioning-adapter</module>
     <module>opennms-jasper-extensions</module>
+    <module>opennms-jasperstudio-extension</module>
     <module>opennms-vmware</module>
     <module>opennms-vtdxml-collector-handler</module>
   </modules>
